# Flam

./: .gitignore  DEVELOPMENT.md  PROJECT_STATUS.md  README.md  SETUP_GUIDE.md  TESTING_GUIDE.md  TESTING_RESULTS.md  build.gradle  settings.gradle  setup.bat  setup.sh  test_setup.bat  test_web.bat  test_web_simple.bat
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  opencv_processor.cpp  opencv_processor.h
app/src/main/java/com/flam/edgedetection/: MainActivity.kt
app/src/main/java/com/flam/edgedetection/camera/: CameraManager.kt
app/src/main/java/com/flam/edgedetection/gl/: OpenGLRenderer.kt
app/src/main/java/com/flam/edgedetection/jni/: JNIBridge.kt
app/src/main/java/com/flam/edgedetector/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
web/: README.md  package.json
web/public/: api-test.html  assignment-compliant.html  enhanced-bonus.html  final-test.html  index.html  metrics-test.html  quick-test.html  simple-fix.html  simple-test.html  test.html  working-test.html
web/src/: frame-processor.ts  index.ts  types.ts  websocket-server.ts
